# smart-walker-gait

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: camera_intrinsics_default.yaml  pipeline.yaml
scripts/: run_pipeline_demo.py  run_pipeline_webcam.py
src/walker_gait/calibration/: calibrate_camera.py
src/walker_gait/core/: factory.py  types.py
src/walker_gait/depth/: backprojection.py
src/walker_gait/detector/: base.py  dummy.py  yolov8_backend.py
src/walker_gait/frame_source/: base.py  mono_depth_proxy.py  synthetic.py  video_file.py  webcam.py
src/walker_gait/gait/: events.py  metrics.py
src/walker_gait/imu/: base.py  bno085_backend.py  dummy.py
src/walker_gait/pose2d/: base.py  dummy.py  mmpose_backend.py
src/walker_gait/smoothing/: base.py  kalman.py  motionbert_backend.py
src/walker_gait/tracking/: base.py  iou_tracker.py
tests/: test_backprojection.py  test_detector.py  test_gait_events.py  test_gait_metrics.py  test_kalman_smoother.py  test_synthetic_source.py  test_tracker.py
